--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Tanafaso</string>
-  <string name="facebook_app_id">276470280856590</string>
-  <string name="fb_login_protocol_scheme">fb214711639942623</string>
+  <string name="app_name">تنافسوا</string>
+  <string name="facebook_app_id">143985681031200</string>
+  <string name="fb_login_protocol_scheme">fb143985681031200</string>
 </resources>
